<?xml version="1.0"?>
<package format="3">
  <name>rover_control</name>
  <version>0.0.1</version>
  <description>C++ nodes for goal sending and odometry printing</description>
  <maintainer email="tural@example.com">Tural</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>cartographer</depend>
  <depend>cartographer_msgs</depend>
  <depend>nav2_map_server</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
